@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST libxfce4menu-4.5.92.tar.bz2 403765 RMD160 aaba40429622c4aaf1ec1c84cb8084e4c0d1940e SHA1 df810e883842d73f833afe13d8f2a5b7967ae17d SHA256 21a1690c4920aa515e6d3ae18a508ff80c610cd044d488936b296bc671d2150d
 DIST libxfce4menu-4.5.93.tar.bz2 397676 RMD160 20ea738f11ad3679e13fe2b822d741f3c86b02bb SHA1 86b546b1ce619fff6bb3ba7c1716f4128a6cc175 SHA256 730a6df31b4e4d2ab5b16c4974935925798b56f1314f81f0ba330ca7ca9c8452
+DIST libxfce4menu-4.5.99.1.tar.bz2 398381 RMD160 a6796a3f943735e3fb7bed7b8de95e9ecc88d0de SHA1 9b045dbd4d911d3ce87e71d6e80753a25f0e87da SHA256 2a98dffd95069889f8425da2134f8c4a8e64934e4de715ec34929ca7e9e0ce73
 EBUILD libxfce4menu-4.5.92.ebuild 608 RMD160 c4074b63c31b00ed7d62e018af5da7bf713fbb27 SHA1 dfa60adbfb3cea1e9e72a3c09da16988e53483b4 SHA256 b90fd71988947b0a92daf2cb278331012c397a06c720254935b8a1e8d3a43e03
 EBUILD libxfce4menu-4.5.93.ebuild 608 RMD160 c4074b63c31b00ed7d62e018af5da7bf713fbb27 SHA1 dfa60adbfb3cea1e9e72a3c09da16988e53483b4 SHA256 b90fd71988947b0a92daf2cb278331012c397a06c720254935b8a1e8d3a43e03
+EBUILD libxfce4menu-4.5.99.1.ebuild 608 RMD160 c4074b63c31b00ed7d62e018af5da7bf713fbb27 SHA1 dfa60adbfb3cea1e9e72a3c09da16988e53483b4 SHA256 b90fd71988947b0a92daf2cb278331012c397a06c720254935b8a1e8d3a43e03
 EBUILD libxfce4menu-9999.ebuild 630 RMD160 c0639f4cdb8346b135f436afbbc22c5f4aea8ed1 SHA1 3366423d032d99102ad388ffe0f7417b31373c8a SHA256 bea6fa3d397dc0d063ecaaf0177dd424d34ef5a11e90f223a80fc98c26a64e5a
-MISC ChangeLog 749 RMD160 1f8627823d460fce1f6d6c604b2ae2cbe2391195 SHA1 d3c9842c957b73d750ca82d92eec00593090c0db SHA256 284108d1097451fa23546e75c1941f06c546380d5b645130acfa7912852f5c30
+MISC ChangeLog 888 RMD160 ebdd99aa9ff5902d21d811a49566aef3933505cc SHA1 e6d3929ff4ae57e67e115ff5927cdc91bf0fb7d7 SHA256 3815d4c8b23a9d9826d6dfa20d16aeaeb68e0e94e296a6211725575fcbd91123
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYYACgkQKhnDs22gwa8D3gCgt1RGByBhhw24IkRylTEL1gr4
-fFoAoPhhLPV1dj6vCACAmqJv+cQXENQL
-=Qe6M
+iEYEARECAAYFAkl9xYAACgkQKhnDs22gwa/sNQCfaEE3ZvkxpcIY9z0YVVoPGvbO
+Ol0AoPfKtQD4J8wqMTaiG0sB3Kjx5hSU
+=fzXw
 -----END PGP SIGNATURE-----
